Morning lecture tips to complete assignment

--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <div class="container">
+      <h1 class="clock">
+        <span class='hours'>00</span>
+        <span class='minutes'>00</span>
+        <span class='seconds'>00</span>
+      </h1>
 
-    <h1 id="title" class="main-title">Stop Watch</h1>
-    <div class="">
-      <div></div>
-      <div></div>
-      <div></div>
+      <hr id='progress-bar' />
     </div>
-    <div class="start">
 
-    </div>
-
-    <!-- <script type="text/javascript" src="watch.js"></script> ** training script to watch.js code ** -->
+    <script src='main.js'></script><!-- <script type="text/javascript" src="watch.js"></script> ** training script to watch.js code ** -->
 
   </body>
 </html>
